<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="40dp">

            <Button
                android:id="@+id/sleep_form_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/back_btn"
                />

            <TextView
                android:textSize="19dp"
                android:id="@+id/sleep_form_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="3dp"
                android:hint="@string/date_to_sleep" />

            <EditText
                android:id="@+id/sleep_form_time_sleep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number|time"
                android:hint="@string/time_to_sleep" />
            <EditText
                android:id="@+id/sleep_form_time_wake_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number|time"
                android:hint="@string/time_to_wake_up" />
            <Button
                android:id="@+id/sleep_form_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/save" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>