<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/weight_form_back_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Back"
                />

            <TextView
                android:textSize="19dp"
                android:id="@+id/weight_form_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="3dp"
                android:hint="@string/day" />

            <EditText
                android:id="@+id/weight_form_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/weigth_day" />
            <Button
                android:id="@+id/weight_form_save_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>