<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/register_email"
            android:drawableLeft="@drawable/email"
            android:drawableTint="@color/colorButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="text" />


        <EditText
            android:id="@+id/register_password"
            android:drawableLeft="@drawable/password"
            android:drawableTint="@color/colorButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/register_re_password"
            android:drawableLeft="@drawable/password"
            android:drawableTint="@color/colorButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_register_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_regis"
            android:background="@color/colorPrimary"
            />


    </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>